--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
-    "discord-webhook-node": "^1.1.8"
+    "discord-webhook-node": "^1.1.8",
+    "dotenv": "^10.0.0",
+    "mongoose": "^6.1.4"
   }
 }
