--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.24.0",
     "discord-webhook-node": "^1.1.8",
     "dotenv": "^10.0.0",
-    "mongoose": "^6.1.4"
+    "mongoose": "^6.1.4",
+    "request": "^2.88.2"
   }
 }
