--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "discord-webhook-node": "^1.1.8",
     "dotenv": "^10.0.0",
     "mongoose": "^6.1.4",
+    "puppeteer": "^13.0.1",
+    "puppeteer-extra": "^3.2.3",
+    "puppeteer-extra-plugin-stealth": "^2.9.0",
     "request": "^2.88.2"
   }
 }
