--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "discord-webhook-node": "^1.1.8",
     "dotenv": "^10.0.0",
     "mongoose": "^6.1.4",
+    "node-cron": "^3.0.0",
     "puppeteer": "^13.0.1",
     "puppeteer-extra": "^3.2.3",
     "puppeteer-extra-plugin-stealth": "^2.9.0",
